--- a/practice frontend/home.css
+++ b/practice frontend/home.css
@@ -16,7 +16,7 @@ body{
 }
 
 .create-todo{
-  width
+  width: 800px;
   background-color: aquamarine;
   position:center;
   align-items:center;
@@ -25,7 +25,9 @@ body{
 
 }
 .create-todo input{
+  margin:400px 40px;
   width: 350px;
+  padding:7px;
 }
 .task{
   background-color: rgba(156, 156, 154, 0.582);
@@ -33,12 +35,13 @@ body{
   border-radius: 0px;
 }
 .search{
-  background: black;
-  color: gray;
+  background: gold;
+  color:aliceblue;
   border: 2px solid white;
   border-bottom: 6px solid white;
   border-radius: 0px;
-  border-bottom-right-radius: 15px;
+  padding: 10px;
+  padding-right: 100px;
 }
 
 
