--- a/practice frontend/home.css
+++ b/practice frontend/home.css
@@ -5,38 +5,44 @@ body{
 .container-1{
   display:flex;
   height:100vh;
-  background-color: gray;
+  background-color:#6f09e4;
 }
 
 .banner{
-  background-color:aqua;
+  display: flex;
+  flex-direction: row;
   padding:25px;
   margin: 10px;
   align-content:space-between;
 }
+.banner button{
+  padding-top: 5px;
+  margin-top:20px;
+}
 
 .create-todo{
   width: 800px;
-  background-color: aquamarine;
-  position:center;
   align-items:center;
-  display: block;
-  padding: 300px,
+  align-content: center;
 
 }
 .create-todo input{
-  margin:400px 40px;
-  width: 350px;
-  padding:7px;
+  margin:40px 4px;
+  width: 40%;
+  padding:4px;
+  align-items: center;
+  
 }
 .task{
-  background-color: rgba(156, 156, 154, 0.582);
+  background-color: rgb(175, 175, 135);
   color: aliceblue;
-  border-radius: 0px;
+  border-radius: 3px;
+  margin-top:4px;
+  margin-bottom: 4px;
 }
 .search{
-  background: gold;
-  color:aliceblue;
+  background: rgba(156, 156, 154, 0.582);
+  color: aliceblue;
   border: 2px solid white;
   border-bottom: 6px solid white;
   border-radius: 0px;
@@ -47,7 +53,7 @@ body{
 
 button{
   padding:10px;
-  margin-left: 25px;
+  margin-left: 13px;
   border-radius: 10px;
 }
 input{
@@ -55,4 +61,20 @@ input{
 }
 .textbox{
   width: 600px;
+}
+@media(min-width:500px) {
+  .banner{width: 800px;
+    padding:10px;
+    display: flex;
+    flex-direction: column;
+
+  }
+.container-1{
+  display: flex;
+  flex-direction: column;
+}
+.task{
+  width: 50px;
+  height: 4px;
+}
 }
