--- a/style.css
+++ b/style.css
@@ -1,120 +1,156 @@
-body {
-  margin: 0;
-  min-width: 150px;
-}
 
-/* Include the padding and border in an element's total width and height */
-* {
-  box-sizing: border-box;
+   
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-
-/* Remove margins and padding from the list */
-ul {
-  margin: 0;
-  padding: 0;
+.container{
+    width: 100%;
+    height: 100vh;
+    background: rgb(77, 37, 37);
+    position: relative;
+    overflow: hidden;
 }
-
-/* Style the list items */
-ul li {
-  cursor: pointer;
-  position: relative;
-  padding: 12px 8px 12px 40px;
-  list-style-type: none;
-  background: #eee;
-  font-size: 18px;
-  transition: 0.2s;
-  
-  /* make the list items unselectable */
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+.sidebar{
+    width: 30%;
+    height: 100vh;
+    background: #d88989;
+    position: absolute;
+    left: 0;
+    top: 0; 
 }
-
-/* Set all odd list items to a different color (zebra-stripes) */
-ul li:nth-child(odd) {
-  background: #f9f9f9;
+.sidebar .menu{
+    cursor: pointer;
+    margin: 15px 25%;
+    width: 150px;
+    box-shadow: 0 0 5px rgb(180, 100, 100);
 }
-
-/* Darker background-color on hover */
-ul li:hover {
-  background: #ddd;
+.input{
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 25%;
+    /* transform: translateY(-50%); */
 }
-
-/* When clicked on, add a background color and strike out text */
-ul li.checked {
-  background: #888;
-  color: #fff;
-  text-decoration: line-through;
+.input input{
+    width: 60%;
+    padding: 10px;
+    background: #311313;
+    border: 2px solid hsl(0, 85%, 74%);
+    border-bottom: 2px solid white;
+    color: #fbfcfd;
 }
-
-/* Add a "checked" mark when clicked on */
-ul li.checked::before {
-  content: '';
-  position: absolute;
-  border-color: #fff;
-  border-style: solid;
-  border-width: 0 2px 2px 0;
-  top: 10px;
-  left: 16px;
-  transform: rotate(45deg);
-  height: 15px;
-  width: 7px;
+.input input:focus{
+    outline: none;
 }
-
-/* Style the close button */
-.close {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 12px 16px 12px 16px;
+.button{
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 60%;
 }
-
-.close:hover {
-  background-color: #f44336;
-  color: white;
+.button input{
+    width: 65%;
+    margin: 10px 0;
+    padding: 10px;
+    background: #333;
+    color: rgb(214, 210, 210);
+    text-transform: capitalize;
+    letter-spacing: 2px;
+    font-size: .85rem;
+    font-weight: 600;
+    border: none;
+    cursor: pointer;
+    transition: all .5s ease;
 }
-
-/* Style the header */
-.header {
-  background-color: #f44336;
-  padding: 30px 40px;
-  color: white;
-  text-align: center;
+.button input:hover{
+    background: rgb(83, 2, 2);
 }
-
-/* Clear floats after the header */
-.header:after {
-  content: "";
-  display: table;
-  clear: both;
+.content{
+    width: 70%;
+    text-align: center;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    left: 31%;
+    transform: translateY(-50%);
+    
 }
+.content input{
+    width: 80%;
+    background: #1d1d1d;
+    padding: 10px;
+    border: none;
+    color: #fbfcfd;
 
-/* Style the input */
-input {
-  margin: 0;
-  border: none;
-  border-radius: 0;
-  width: 75%;
-  padding: 10px;
-  float: left;
-  font-size: 16px;
 }
-
-/* Style the "Add" button */
-.addBtn {
-  padding: 10px;
-  width: 25%;
-  background: #d9d9d9;
-  color: #555;
-  float: left;
-  text-align: center;
-  font-size: 16px;
-  cursor: pointer;
-  transition: 0.3s;
-  border-radius: 0;
+.content input:focus{
+    outline: none;
 }
-
-.addBtn:hover {
-  background-color: #bbb;
+/*@media(max-width:567px){
+    .sidebar{
+        height: 40% !important;
+    }
+    .r{
+        display: block !important;
+        align-items: center;
+        justify-content: center;
+        transform: translateX(0%);
+    }
+    .menu{
+        width: 100px !important;
+        height: 50px !important;
+        transform:  translateX(110%);
+    }
+    .button{
+        margin: 80px 15px !important;
+    }
+    .input{
+        margin: 0 7.5%;
+    }
+    .input input{
+        width: 80%;
+        margin-top: 2rem;
+    }
+}*/
+@media(max-width: 800px){
+     .sidebar{
+        position: relative;
+        width: 100%;
+        height: 200px;
+    }
+    .menu{
+        display: block;
+        width: 100px;
+        height: 90px;
+        margin: 10px 0px 5px 25px !important;
+    }
+    .r{
+        display: flex;
+        width: 100%;
+        transform: translateX(-7%);
+    }
+    .button{
+        position: relative;
+        display: flex;
+        margin-top: 6px;
+    }
+    .button input{
+        margin-left: 20px;
+        padding: 15px 10px;
+    }
+    .input{
+        position: relative;
+        margin-top: 20px;
+    }
+    .content{
+        width: 100%;
+        transform: translateY(50%) !important;
+        left: 0;
+    }
+    .content input{
+        width: 100%;
+    }
 }
