--- a/style.css
+++ b/style.css
@@ -1,156 +1,80 @@
-
-   
-*{
+.maincontainer {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  font-size: 25rem;
+}
+.leftcolumn {
+  width: 30%;
+  display: flex;
+  padding: 0 36px;
+  flex-direction: column;
+  background-color: #3d3b3b;
+}
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 70%;
+  background-color: rgb(27, 26, 26);
+}
+.btn {
+  margin: 15px 0;
+  color: azure;
+  background-color: dimgrey;
+  outline: none;
+  border: 0;
+  height: 38px;
+  border-radius: 5px;
+  font-weight: bold;
+  padding: 0 8px;
+  font-size: 14px;
+}
+.search {
+  margin-top: 70px;
+  margin-bottom: 120px;
+  font-size: 14px;
+  color: beige;
+  outline: none;
+  border-radius: 5px;
+  padding: 4px 12px;
+  background-color: #3d3b3b32;
+  border-bottom: 3px solid whitesmoke;
+}
+.create-todo {
+  background-color: rgb(146, 143, 143);
+  color: white;
+  margin-left: 25px;
+  width: 60%;
+  outline: none;
+  border-radius: 5px;
+  padding: 12px;
+  font-size: 14px;
+}
+.create-todo::placeholder {
+  color: whitesmoke;
+}
+@media (max-width: 720px) {
+  .maincontainer {
+    flex-direction: column;
+  }
+  .leftcolumn {
+    width: auto;
+    flex-direction: row;
+    display: flex;
+    justify-content: space-between;
+    padding: 32px 32px 60px 32px;
+    flex-wrap: wrap;
+  }
+  .content {
+    width: 100%;
+    height: 100%;
+  }
+  .btn {
+    margin: 0 0 0 15px;
+  }
+  .search {
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-.container{
-    width: 100%;
-    height: 100vh;
-    background: rgb(77, 37, 37);
-    position: relative;
-    overflow: hidden;
-}
-.sidebar{
-    width: 30%;
-    height: 100vh;
-    background: #d88989;
-    position: absolute;
-    left: 0;
-    top: 0; 
-}
-.sidebar .menu{
-    cursor: pointer;
-    margin: 15px 25%;
-    width: 150px;
-    box-shadow: 0 0 5px rgb(180, 100, 100);
-}
-.input{
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    top: 25%;
-    /* transform: translateY(-50%); */
-}
-.input input{
-    width: 60%;
-    padding: 10px;
-    background: #311313;
-    border: 2px solid hsl(0, 85%, 74%);
-    border-bottom: 2px solid white;
-    color: #fbfcfd;
-}
-.input input:focus{
-    outline: none;
-}
-.button{
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    top: 60%;
-}
-.button input{
-    width: 65%;
-    margin: 10px 0;
-    padding: 10px;
-    background: #333;
-    color: rgb(214, 210, 210);
-    text-transform: capitalize;
-    letter-spacing: 2px;
-    font-size: .85rem;
-    font-weight: 600;
-    border: none;
-    cursor: pointer;
-    transition: all .5s ease;
-}
-.button input:hover{
-    background: rgb(83, 2, 2);
-}
-.content{
-    width: 70%;
-    text-align: center;
-    padding: 20px;
-    position: absolute;
-    top: 50%;
-    left: 31%;
-    transform: translateY(-50%);
-    
-}
-.content input{
-    width: 80%;
-    background: #1d1d1d;
-    padding: 10px;
-    border: none;
-    color: #fbfcfd;
-
-}
-.content input:focus{
-    outline: none;
-}
-/*@media(max-width:567px){
-    .sidebar{
-        height: 40% !important;
-    }
-    .r{
-        display: block !important;
-        align-items: center;
-        justify-content: center;
-        transform: translateX(0%);
-    }
-    .menu{
-        width: 100px !important;
-        height: 50px !important;
-        transform:  translateX(110%);
-    }
-    .button{
-        margin: 80px 15px !important;
-    }
-    .input{
-        margin: 0 7.5%;
-    }
-    .input input{
-        width: 80%;
-        margin-top: 2rem;
-    }
-}*/
-@media(max-width: 800px){
-     .sidebar{
-        position: relative;
-        width: 100%;
-        height: 200px;
-    }
-    .menu{
-        display: block;
-        width: 100px;
-        height: 90px;
-        margin: 10px 0px 5px 25px !important;
-    }
-    .r{
-        display: flex;
-        width: 100%;
-        transform: translateX(-7%);
-    }
-    .button{
-        position: relative;
-        display: flex;
-        margin-top: 6px;
-    }
-    .button input{
-        margin-left: 20px;
-        padding: 15px 10px;
-    }
-    .input{
-        position: relative;
-        margin-top: 20px;
-    }
-    .content{
-        width: 100%;
-        transform: translateY(50%) !important;
-        left: 0;
-    }
-    .content input{
-        width: 100%;
-    }
+    width: 50%;
+  }
 }
